[DEV] rename disable[feature] to disable[feature]control for disambiguation

--- a/myscript-common-element.html
+++ b/myscript-common-element.html
@@ -194,25 +194,23 @@ Custom property | Description | Default
         <div class="error-msg" hidden>MyScript recognition server is not reachable. Please reload once you are
             connected
         </div>
-        <template is="dom-if" if="[[ !hidebuttons ]]">
-            <nav>
-                <paper-fab mini src$="[[importPath]]clear.svg" title="clear" on-tap="clear"
-                           disabled="[[ !canclear ]]" hidden="[[ disableclear ]]">
-                </paper-fab>
-                <paper-fab mini src$="[[importPath]]undo.svg" title="undo" on-tap="undo"
-                           disabled="[[ !canundo ]]" hidden="[[ disableundoredo ]]">
-                </paper-fab>
-                <paper-fab mini src$="[[importPath]]redo.svg" title="redo" on-tap="redo"
-                           disabled="[[ !canredo ]]" hidden="[[ disableundoredo ]]">
-                </paper-fab>
-                <paper-fab mini src$="[[importPath]]export.svg" title="export" on-tap="askForExport"
-                           disabled="[[ !canexport ]]" hidden="[[ disableexport ]]">
-                </paper-fab>
-                <paper-fab mini src$="[[importPath]]convert.svg" title="convert" on-tap="convert"
-                           disabled="[[ !canconvert ]]" hidden="[[ disableconvert ]]">
-                </paper-fab>
-            </nav>
-        </template>
+        <nav hidden="[[ disablecontrols ]]">
+            <paper-fab mini src$="[[importPath]]clear.svg" title="clear" on-tap="clear"
+                       disabled="[[ !canclear ]]" hidden="[[ disableclearcontrol ]]">
+            </paper-fab>
+            <paper-fab mini src$="[[importPath]]undo.svg" title="undo" on-tap="undo"
+                       disabled="[[ !canundo ]]" hidden="[[ disableundoredocontrol ]]">
+            </paper-fab>
+            <paper-fab mini src$="[[importPath]]redo.svg" title="redo" on-tap="redo"
+                       disabled="[[ !canredo ]]" hidden="[[ disableundoredocontrol ]]">
+            </paper-fab>
+            <paper-fab mini src$="[[importPath]]export.svg" title="export" on-tap="askForExport"
+                       disabled="[[ !canexport ]]" hidden="[[ disableexportcontrol ]]">
+            </paper-fab>
+            <paper-fab mini src$="[[importPath]]convert.svg" title="convert" on-tap="convert"
+                       disabled="[[ !canconvert ]]" hidden="[[ disableconvertcontrol ]]">
+            </paper-fab>
+        </nav>
         <div id="editorDomElement" class="ms-editor"></div>
         <paper-toast class="fit-bottom"></paper-toast>
     </template>
@@ -440,42 +438,42 @@ Custom property | Description | Default
                         notify: true
                     },
                     /**
-                     * If set to true, hide the buttons (Trash, Undo, Redo).
+                     * If set to true, remove the controls (undo/redo, clear...).
                      */
-                    hidebuttons: {
+                    disablecontrols: {
                         type: Boolean,
                         reflectToAttribute: true,
                         value: false,
                         notify: true
                     },
                     /**
-                     * True if the undo/redo feature is disabled, false otherwise
+                     * If set to true, remove the undo/redo controls.
                      */
-                    disableundoredo: {
+                    disableundoredocontrol: {
                         type: Boolean,
                         reflectToAttribute: true,
                         value: false
                     },
                     /**
-                     * True if the clear feature is disabled, false otherwise
+                     * If set to true, remove the clear control.
                      */
-                    disableclear: {
+                    disableclearcontrol: {
                         type: Boolean,
                         reflectToAttribute: true,
                         value: false
                     },
                     /**
-                     * True if the export feature is disabled, false otherwise
+                     * If set to true, remove the export control.
                      */
-                    disableexport: {
+                    disableexportcontrol: {
                         type: Boolean,
                         reflectToAttribute: true,
                         value: false
                     },
                     /**
-                     * True if the convert feature is disabled, false otherwise
+                     * If set to true, remove the convert control.
                      */
-                    disableconvert: {
+                    disableconvertcontrol: {
                         type: Boolean,
                         reflectToAttribute: true,
                         value: false
@@ -591,11 +589,13 @@ Custom property | Description | Default
                     .keys(this.currentListeners)
                     .forEach(type => this.editorDomElement.addEventListener(type, this.currentListeners[type]));
 
+                Polymer.RenderStatus.beforeNextRender(this, () => {
                     this.editor = MyScript.register(this.editorDomElement, this._buildConfiguration(), this._buildCustomStyle());
                     this.configuration = this.editor.configuration;
 
-                this.logger.info('common-element attached');
-                this.initializing = false;
+                    this.logger.info('common-element attached');
+                    this.initializing = false;
+                })
             }
 
             disconnectedCallback() {
