--- a/demo/get_languages.html
+++ b/demo/get_languages.html
@@ -12,19 +12,13 @@
 
     <script src="../../webcomponentsjs/webcomponents-loader.js"></script>
     <link rel="import" href="../myscript-languages-element.html">
-    <custom-style>
-        <style>
-            myscript-languages-element {
-                --myscript-languages-element-display: block; /** Not displayed by default **/
-            }
-        </style>
-    </custom-style>
 </head>
 <body>
     <myscript-languages-element scheme="https"
                                 host="webdemoapi.myscript.com"
                                 applicationkey="515131ab-35fa-411c-bb4d-3917e00faf60"
-                                hmackey="54b2ca8a-6752-469d-87dd-553bb450e9ad">
+                                hmackey="54b2ca8a-6752-469d-87dd-553bb450e9ad"
+                                select>
     </myscript-languages-element>
 </body>
 </html>
