--- a/demo/styling.html
+++ b/demo/styling.html
@@ -36,7 +36,9 @@
         applicationkey="515131ab-35fa-411c-bb4d-3917e00faf60"
         hmackey="54b2ca8a-6752-469d-87dd-553bb450e9ad"
         strokecolor="white"
-        strokewidth="10">
+        strokewidth="10"
+        disableexportcontrol
+        disableconvertcontrol>
     </myscript-common-element>
 </body>
 </html>
