--- a/demo/v4_configuration.html
+++ b/demo/v4_configuration.html
@@ -18,8 +18,8 @@
         type="MATH"
         protocol="WEBSOCKET"
         apiversion="V4"
-        scheme="http"
-        host="localhost:8897"
+        scheme="https"
+        host="newcloud.myscript.com"
         applicationkey="7d223f9e-a3cb-4213-ba4b-85e930605f8b"
         hmackey="5ab1935e-529a-4d48-a695-158450e52b13">
     </myscript-common-element>
