[Examples]Renaming of code examples

--- a/examples/v4/index.html
+++ b/examples/v4/index.html
@@ -10,7 +10,7 @@
 
     <!-- As web components are not fully support -->
     <script src="../../../webcomponentsjs/webcomponents-lite.js"></script>
-
+    <link rel="stylesheet" href="../examples.css">
     <!-- myscript-common-element is import to be used later -->
     <link rel="import" href="../../myscript-common-element.html">
     <!-- we use a paper toast for the purpose of this demo -->
