--- a/examples/get_languages_programmatic.html
+++ b/examples/get_languages_programmatic.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html>
+
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0, user-scalable=no">
@@ -8,11 +9,12 @@
 
     <title>Get available languages programmatically</title>
 
-    <link rel="stylesheet" href="demo.css">
+    <link rel="stylesheet" href="examples.css">
 
     <script src="../../webcomponentsjs/webcomponents-loader.js"></script>
     <link rel="import" href="../myscript-languages-element.html">
 </head>
+
 <body>
     <select id="language" disabled></select>
     <myscript-languages-element />
@@ -66,4 +68,5 @@
         }, 3000);
     });
 </script>
+
 </html>
