--- a/examples/programmatic_init.html
+++ b/examples/programmatic_init.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html>
+
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0, user-scalable=no">
@@ -8,13 +9,14 @@
 
     <title>Programmatic initialization</title>
 
-    <link rel="stylesheet" href="demo.css">
+    <link rel="stylesheet" href="examples.css">
 
     <script src="../../webcomponentsjs/webcomponents-loader.js"></script>
     <link rel="import" href="../myscript-common-element.html">
 </head>
+
 <body>
-<myscript-common-element/>
+    <myscript-common-element unloaded/>
 </body>
 <script>
     window.addEventListener('load', () => {
@@ -55,4 +57,5 @@
         });
     });
 </script>
+
 </html>
