--- a/examples/v3/customizing_style.html
+++ b/examples/v3/customizing_style.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html>
+
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0, user-scalable=no">
@@ -8,10 +9,10 @@
 
     <title>Styling</title>
 
-    <link rel="stylesheet" href="demo.css">
+    <link rel="stylesheet" href="../examples.css">
 
-    <script src="../../webcomponentsjs/webcomponents-loader.js"></script>
-    <link rel="import" href="../myscript-common-element.html">
+    <script src="../../../webcomponentsjs/webcomponents-loader.js"></script>
+    <link rel="import" href="../../myscript-common-element.html">
     <custom-style>
         <style>
             myscript-common-element {
@@ -27,18 +28,11 @@
         </style>
     </custom-style>
 </head>
+
 <body>
     <!-- Please change applicationkey and hmackey below with those send by mail during your registration. You can re-access them by connecting to your dashboard at developer.myscript.com with your myscript account -->
-    <myscript-common-element
-        type="SHAPE"
-        scheme="https"
-        host="webdemoapi.myscript.com"
-        applicationkey="515131ab-35fa-411c-bb4d-3917e00faf60"
-        hmackey="54b2ca8a-6752-469d-87dd-553bb450e9ad"
-        pencolor="#FFFFFF"
-        penwidth="2"
-        disableexportcontrol
-        disableconvertcontrol>
+    <myscript-common-element type="SHAPE" scheme="https" host="webdemoapi.myscript.com" applicationkey="515131ab-35fa-411c-bb4d-3917e00faf60" hmackey="54b2ca8a-6752-469d-87dd-553bb450e9ad" pencolor="#FFFFFF" penwidth="2" disableexportcontrol disableconvertcontrol>
     </myscript-common-element>
 </body>
+
 </html>
