--- a/examples/v3/handling_exports.html
+++ b/examples/v3/handling_exports.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html>
+
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0, user-scalable=no">
@@ -8,21 +9,17 @@
 
     <title>Handle exports</title>
 
-    <link rel="stylesheet" href="demo.css">
+    <link rel="stylesheet" href="../examples.css">
 
-    <script src="../../webcomponentsjs/webcomponents-loader.js"></script>
-    <link rel="import" href="../../paper-toast/paper-toast.html">
-    <link rel="import" href="../myscript-common-element.html">
+    <script src="../../../webcomponentsjs/webcomponents-loader.js"></script>
+    <link rel="import" href="../../../paper-toast/paper-toast.html">
+    <link rel="import" href="../../myscript-common-element.html">
 </head>
+
 <body>
     <paper-toast class="fit-top"></paper-toast>
     <!-- Please change applicationkey and hmackey below with those send by mail during your registration. You can re-access them by connecting to your dashboard at developer.myscript.com with your myscript account -->
-    <myscript-common-element
-        type="MATH"
-        scheme="https"
-        host="webdemoapi.myscript.com"
-        applicationkey="515131ab-35fa-411c-bb4d-3917e00faf60"
-        hmackey="54b2ca8a-6752-469d-87dd-553bb450e9ad">
+    <myscript-common-element type="MATH" scheme="https" host="webdemoapi.myscript.com" applicationkey="515131ab-35fa-411c-bb4d-3917e00faf60" hmackey="54b2ca8a-6752-469d-87dd-553bb450e9ad">
     </myscript-common-element>
 </body>
 <script>
@@ -32,4 +29,5 @@
         paperToast.fitIn = paperToast.show();
     });
 </script>
+
 </html>
