--- a/examples/myscript-languages-element/get_languages.html
+++ b/examples/myscript-languages-element/get_languages.html
@@ -11,8 +11,8 @@
 
     <link rel="stylesheet" href="examples.css">
 
-    <script src="../../webcomponentsjs/webcomponents-loader.js"></script>
-    <link rel="import" href="../myscript-languages-element.html">
+    <script src="../../../webcomponentsjs/webcomponents-loader.js"></script>
+    <link rel="import" href="../../myscript-languages-element.html">
 </head>
 
 <body>
