--- a/examples/myscript-languages-element/get_languages_programmatic.html
+++ b/examples/myscript-languages-element/get_languages_programmatic.html
@@ -9,10 +9,10 @@
 
     <title>Get available languages programmatically</title>
 
-    <link rel="stylesheet" href="examples.css">
+    <link rel="stylesheet" href="../examples.css">
 
-    <script src="../../webcomponentsjs/webcomponents-loader.js"></script>
-    <link rel="import" href="../myscript-languages-element.html">
+    <script src="../../../webcomponentsjs/webcomponents-loader.js"></script>
+    <link rel="import" href="../../myscript-languages-element.html">
 </head>
 
 <body>
