[FIX] fixes v4 examples

--- a/myscript-common-element.html
+++ b/myscript-common-element.html
@@ -373,10 +373,7 @@ Custom property | Description | Default
                      */
                     configuration: {
                         type: Object,
-                        notify: true,
-                        value() {
-                            return this._buildConfiguration();
-                        }
+                        notify: true
                     },
                     /**
                      * Color (supported formats rgb() rgba() hsl() hsla() #rgb #rgba #rrggbb #rrggbbaa)
