--- a/examples/v4/index.html
+++ b/examples/v4/index.html
@@ -22,7 +22,7 @@
             margin: 0;
             height: 95vh;
         }
-        
+
         myscript-common-element {
             height: 100%;
         }
@@ -30,17 +30,24 @@
 </head>
 
 <body>
-    <paper-toast class="fit-top"></paper-toast>
-    <!-- Please change applicationkey and hmackey below with those send by mail during your registration. You can re-access them by connecting to your dashboard at developer.myscript.com with your myscript account -->
-    <myscript-common-element apiversion="V4" type="MATH" protocol="WEBSOCKET" scheme="https" host="newcloud.myscript.com" applicationkey="515131ab-35fa-411c-bb4d-3917e00faf60" hmackey="54b2ca8a-6752-469d-87dd-553bb450e9ad">
-    </myscript-common-element>
-    <script>
-        const paperToast = document.querySelector('paper-toast');
-        document.querySelector('myscript-common-element').addEventListener('exported', (event) => {
-            paperToast.text = `Recognition object contains : ${JSON.stringify(event.detail)}`;
-            paperToast.fitIn = paperToast.show();
-        });
-    </script>
+<paper-toast class="fit-top"></paper-toast>
+<!-- Please change applicationkey and hmackey below with those send by mail during your registration. You can re-access them by connecting to your dashboard at developer.myscript.com with your myscript account -->
+<myscript-common-element apiversion="V4"
+                         type="MATH"
+                         protocol="WEBSOCKET"
+                         scheme="https"
+                         host="newcloud.myscript.com"
+                         applicationkey="515131ab-35fa-411c-bb4d-3917e00faf60"
+                         hmackey="54b2ca8a-6752-469d-87dd-553bb450e9ad"
+                         debug>
+</myscript-common-element>
+<script>
+    const paperToast = document.querySelector('paper-toast');
+    document.querySelector('myscript-common-element').addEventListener('exported', (event) => {
+        paperToast.text = `Recognition object contains : ${JSON.stringify(event.detail)}`;
+        paperToast.fitIn = paperToast.show();
+    });
+</script>
 </body>
 
 </html>
