[DEV] put loader and error mgmt in myscript-js dep

--- a/myscript-languages-element.html
+++ b/myscript-languages-element.html
@@ -188,7 +188,7 @@
             }
 
             _buildConfiguration() {
-                return MyScriptCommonElement._generateConfiguration(
+                return MyScriptLanguagesElement._generateConfiguration(
                     this.configuration,
                     this.triggerdelay,
                     this.processdelay,
