--- a/examples/myscript-languages-element/get_languages.html
+++ b/examples/myscript-languages-element/get_languages.html
@@ -9,15 +9,18 @@
 
     <title>Get available languages</title>
 
-    <link rel="stylesheet" href="examples.css">
+    <link rel="stylesheet" href="../examples.css">
 
     <script src="../../../webcomponentsjs/webcomponents-loader.js"></script>
     <link rel="import" href="../../myscript-languages-element.html">
 </head>
 
 <body>
-    <myscript-languages-element scheme="https" host="webdemoapi.myscript.com" applicationkey="515131ab-35fa-411c-bb4d-3917e00faf60" hmackey="54b2ca8a-6752-469d-87dd-553bb450e9ad" select>
+    <myscript-languages-element scheme="https"
+                                host="webdemoapi.myscript.com"
+                                applicationkey="515131ab-35fa-411c-bb4d-3917e00faf60"
+                                hmackey="54b2ca8a-6752-469d-87dd-553bb450e9ad"
+                                select>
     </myscript-languages-element>
 </body>
-
 </html>
