--- a/examples/v4/customizing_style.html
+++ b/examples/v4/customizing_style.html
@@ -18,7 +18,7 @@
             myscript-common-element {
                 --myscript-common-element-background: url(https://farm6.staticflickr.com/5526/10976824044_aebaebdb12_z_d.jpg);
                 --myscript-common-element-color: #ff7314;
-                --myscript-common-element-line-pattern: none;
+                --myscript-common-element-line-pattern: repeating-linear-gradient(to bottom, #F5F6F7, #F5F6F7 .5px, transparent 1px, transparent 72px);
                 --myscript-common-element-loader-background: #ff7314;
                 --myscript-common-element-loader-color: #F5F6F7;
                 --myscript-common-element-button-background: #ff7314;
