--- a/myscript-common-element.html
+++ b/myscript-common-element.html
@@ -74,7 +74,7 @@ Custom property | Description | Default
             :host {
                 --myscript-common-element-background: none;
                 --myscript-common-element-color: #1A9FFF;
-                --myscript-common-element-line-pattern: url(data:image/svg+xml;charset=utf8;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHdpZHRoPSIxOCIgaGVpZ2h0PSIxOCIgdmlld0JveD0iMCAwIDE4IDE4Ij4KICA8cGF0aCBzdHJva2U9IiNGNUY2RjciIGQ9Ik0wLjUsMCBMMC41LDE4IE0wLDAuNSBMMTgsMC41Ii8+Cjwvc3ZnPgo=);
+                --myscript-common-element-line-pattern: repeating-linear-gradient(to bottom, #F5F6F7, #F5F6F7 .5px, transparent 1px, transparent 18px), repeating-linear-gradient(to right, #F5F6F7, #F5F6F7 .5px, transparent 1px, transparent 18px);
                 --myscript-common-element-capture-background: none;
                 --myscript-common-element-loader-background: #1A9FFF;
                 --myscript-common-element-loader-color: #F5F6F7;
